# DP_news_scout

./: .env.example  .gitignore  13_04-Mods.md  AGENTS.md  CLAUDE.md  CODE-REVIEW.md  DESIGN.md  PLAN.md  PLAN_GLOBAL_MACRO_BRIEFING.md  PLAN_SearchFallback.md  PRD.docx  PRD.md  README.md  WEEKLY-CADENCE-PLAN.md  pyproject.toml  vibe-start.sh
.claude/: settings.json
.github/workflows/: daily_digest.yml  schedule_smoke_test.yml
config/: recipients.yaml  search_fallback_allowlist.yaml  settings.yaml  sources.yaml
dpns.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
prompts/: context_preamble.md  digest_composition.md  global_briefing_composition.md  global_news_scoring.md  relevance_scoring.md
scripts/: run_manual.py  seed_sources.py  test_email.py
src/: __init__.py  main.py
src/analyzer/: __init__.py  digest.py  digest_validation.py  freshness.py  global_briefing.py  llm_client.py  relevance.py  shared.py
src/fetcher/: __init__.py  common.py  dedup.py  models.py  registry.py  rss.py  scraper.py  search_fallback.py
src/pipeline/: finalization.py  global_stages.py  issue_number.py  partition.py  persistence.py  reuse.py  subject.py
src/renderer/: __init__.py  common.py  html_email.py  plaintext.py
src/sender/: __init__.py  (+1 more)
templates/: digest_email.html
tests/: test_analyzer.py  test_config.py  test_db.py  test_digest.py  test_fetcher.py  test_global_briefing.py  test_main.py  test_pipeline.py  test_prompts.py  test_relevance.py  test_renderer.py  test_run_manual.py  test_search_fallback.py  test_seed_sources.py  test_sender.py  test_test_email.py
(+5 files in other folders)
